# one-min-game

./: .gitignore
agent-town/: .env.docker  docker-compose.yml
agent-town/backend/: .env.docker  Dockerfile  requirements.txt  run.py  service_output.txt
agent-town/docs/: 游戏策划.md
agent-town/frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  service_output.txt  tailwind.config.js  tsconfig.tsbuildinfo
demo-flappy-bird/: go.mod
docs/: competition_description.md  flappy-bird.md  idea-brief.md  prd.md  相府鱼美人_完整剧情总结.md
game-studio-pygame/: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  requirements.txt
game-studio-pygame/apps/mcp-server/: pyproject.toml
game-studio-pygame/apps/mcp-server/src/pygame_studio_mcp/: __init__.py  server.py  types.py
game-studio-pygame/apps/mcp-server/src/pygame_studio_mcp/lib/: balance_tuner.py  dsl_parser.py  error_parser.py  exec_utils.py  paths.py  playground_client.py
game-studio-pygame/apps/mcp-server/src/pygame_studio_mcp/tools/: add_llm_to_game.py  apply_game_spec.py  build_game.py  capture_frame.py  capture_screenshot.py  check_environment.py  create_game.py  create_project.py  delete_playground_game.py  download_from_playground.py  generate_readme.py  get_playground_game.py  list_playground_games.py  list_sdk_api.py  list_templates.py  read_game_file.py  run_game.py  scaffold_template.py  tune_balance.py  upload_to_playground.py  validate_gameplay.py  write_game_file.py
game-studio-pygame/docker/: docker-compose.yml
game-studio-pygame/docs/: architecture.md  dsl-schema.md
(+187 files in other folders)
